# GameBoyRL

./: .gitignore  .gitmodules  default_rl.sh  enjoy.sh  notes.md  old.sh  train_rl.sh  trajectories.py
configs/: project_vars.yaml
dev/: test_benchmark.py
execution/: executor.py  executor_action.py  report.py  retrieval.py  supervisor.py  vlm.py
execution/pokemon/: executor_actions.py  executors.py  reports.py
run_benchmark/: run_benchmark_zeroshot.py  vlm_agent.py  vlm_agent_test.py
scripts/: .nfs00000000ae47facc0000009a  clean_cache.sh  default_rl.sh  enjoy.sh  get_strings.py  iterative_agent.sh  iterative_single_agent.sh  iterative_training.sh  random_runs.sh  run_random.sh  sweep.sh  train.sh  train_global_observation_embedder.sh  train_observation_embedder.sh  train_world_model.sh  utils.sh
scripts/ablations/: metric.sh
setup/: pyproject.toml
utils/: __init__.py  fundamental.py  vlm.py
